# structural-python

./: LICENSE  README.md  main.py  pyproject.toml
structapi/config/: params.py  server.py  stream.py
